--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: TAMUC GIS and Data Science Club
 description: We are the TAMUC GIS and Data Science Club, here is where we have our projects and other cool tidbits, stay tuned!
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/26153541?v=4&s=400&u=2de0f99622f3383c9db4f2b6989c9029baf79b8e
 
 #
 # Flags below are optional
